[gd_scene load_steps=47 format=3 uid="uid://b1kab4d8sry8a"]

[ext_resource type="Script" path="res://script/management/title.gd" id="1_ys1qf"]
[ext_resource type="Shader" path="res://shader/spatial/psx_lit_nofog.gdshader" id="3_60g01"]
[ext_resource type="ArrayMesh" uid="uid://dq3rc0ouigxgd" path="res://asset/3d/title/logo.obj" id="3_mxee1"]
[ext_resource type="Shader" path="res://shader/spatial/psx_lit_noenv.gdshader" id="4_2bndm"]
[ext_resource type="Shader" path="res://shader/spatial/psx_unlit_blank.gdshader" id="4_ghmid"]
[ext_resource type="Texture2D" uid="uid://byisj38galtxp" path="res://asset/2d/sprite/title/gift.png" id="6_bfg8e"]
[ext_resource type="Texture2D" uid="uid://c5r116iqnwip2" path="res://asset/2d/ui/title/press_start.png" id="7_j73lr"]
[ext_resource type="Texture2D" uid="uid://dyqdq3bocpikr" path="res://asset/2d/ui/title/file_frame.png" id="8_hgps8"]
[ext_resource type="LabelSettings" uid="uid://cb1c82a2dubgn" path="res://resource/theme/font/default.tres" id="9_2brh2"]
[ext_resource type="Shader" path="res://shader/canvas/transparency.gdshader" id="9_hmdf2"]
[ext_resource type="Texture2D" uid="uid://xj3h3m7xe531" path="res://asset/2d/sprite/player/guardian.png" id="10_g8lf8"]
[ext_resource type="Texture2D" uid="uid://spnyrwx3rosx" path="res://asset/2d/ui/title/panic.png" id="10_lli8y"]
[ext_resource type="Texture2D" uid="uid://ryssvf1pireo" path="res://asset/2d/ui/title/title_piece.png" id="11_b3kyf"]
[ext_resource type="Texture2D" uid="uid://bjpl673weodmi" path="res://asset/2d/ui/psx_buttons.png" id="13_61pkf"]
[ext_resource type="Texture2D" uid="uid://cjiabc2qo06nf" path="res://asset/2d/ui/title/file_options.png" id="14_e1yo8"]
[ext_resource type="FontFile" uid="uid://dtabqugvs5qj6" path="res://asset/2d/font/ttf/PetscopTall.ttf" id="15_1qjog"]
[ext_resource type="Texture2D" uid="uid://byp8lkd0er7r7" path="res://asset/2d/ui/title/continue_cursor.png" id="15_hc7kx"]
[ext_resource type="AudioStream" uid="uid://bf0e6hfsjvudv" path="res://sfx/title_screen/press_start.wav" id="17_q7emt"]
[ext_resource type="AudioStream" uid="uid://cxqsh40sckwcr" path="res://music/petscop.ogg" id="18_ua51s"]
[ext_resource type="AudioStream" uid="uid://cf5ioohi6c4sl" path="res://sfx/title_screen/whistle.wav" id="19_pydtj"]
[ext_resource type="AudioStream" uid="uid://dj7o8l0ta2ci" path="res://sfx/title_screen/choose_file.wav" id="20_iupuy"]
[ext_resource type="ArrayMesh" uid="uid://cby7a0jxj2rfj" path="res://asset/3d/room/title/rail.obj" id="21_aaa3k"]
[ext_resource type="AudioStream" uid="uid://cnako5upv2f80" path="res://sfx/title_screen/next_file.wav" id="21_bh006"]
[ext_resource type="Texture2D" uid="uid://b617s71g30arh" path="res://asset/3d/room/gift/texture.png" id="24_0jas5"]
[ext_resource type="PackedScene" uid="uid://cv7edlpe3aguh" path="res://scene/object/instantiate/fog_focus.tscn" id="25_00iv3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y7r7o"]
render_priority = 0
shader = ExtResource("3_60g01")
shader_parameter/modulate_color = Color(0.658824, 0.321569, 1, 1)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_pan_velocity = Vector2(0, 0)
shader_parameter/alpha_color = Color(1, 0, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4r4qs"]
render_priority = 0
shader = ExtResource("3_60g01")
shader_parameter/modulate_color = Color(1, 0.537255, 1, 1)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_pan_velocity = Vector2(0, 0)
shader_parameter/alpha_color = Color(1, 0, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_286tk"]
render_priority = 0
shader = ExtResource("4_ghmid")
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_pan_velocity = Vector2(0, 0)
shader_parameter/alpha_color = Color(1, 0, 1, 1)
shader_parameter/albedoTex = ExtResource("6_bfg8e")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4qgig"]
shader = ExtResource("9_hmdf2")
shader_parameter/alpha_color = Color(1, 0, 1, 1)
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/albedoTex = ExtResource("10_g8lf8")

[sub_resource type="AtlasTexture" id="AtlasTexture_mwhbj"]
atlas = ExtResource("10_g8lf8")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfpwj"]
atlas = ExtResource("10_g8lf8")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r46ie"]
atlas = ExtResource("10_g8lf8")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt07x"]
atlas = ExtResource("10_g8lf8")
region = Rect2(0, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_666n8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwhbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfpwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r46ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt07x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_k8dyq"]
font = ExtResource("15_1qjog")
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibh5m"]
atlas = ExtResource("13_61pkf")
region = Rect2(0, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge7r2"]
atlas = ExtResource("13_61pkf")
region = Rect2(136, 34, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_bobwt"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_ibh5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge7r2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_r6ycf"]
atlas = ExtResource("13_61pkf")
region = Rect2(102, 34, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr88f"]
atlas = ExtResource("13_61pkf")
region = Rect2(238, 34, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_6x4yc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6ycf")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_vr88f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_f5y8k"]
atlas = ExtResource("13_61pkf")
region = Rect2(0, 102, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrxt5"]
atlas = ExtResource("13_61pkf")
region = Rect2(136, 102, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_8nl5t"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_f5y8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrxt5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Environment" id="Environment_k032k"]
background_mode = 1
background_color = Color(1, 1, 1, 1)
ambient_light_source = 2
ambient_light_color = Color(0.501961, 0, 0.717647, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n176l"]
render_priority = 0
shader = ExtResource("4_2bndm")
shader_parameter/use_fog = true
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_pan_velocity = Vector2(0, 0)
shader_parameter/alpha_color = Color(1, 0, 1, 1)
shader_parameter/albedoTex = ExtResource("24_0jas5")

[node name="TitleScreen" type="Node3D"]
script = ExtResource("1_ys1qf")

[node name="LogoOrigin" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.921, 3.092, 8.487)

[node name="LogoMesh" type="MeshInstance3D" parent="LogoOrigin"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00300002, 0, -0.000999928)
mesh = ExtResource("3_mxee1")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_y7r7o")
surface_material_override/1 = SubResource("ShaderMaterial_4r4qs")

[node name="LogoGift" type="Sprite3D" parent="LogoOrigin"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.951057, 0.309017, 0, -0.309017, 0.951057, 0.003, -0.028, -0.206)
material_override = SubResource("ShaderMaterial_286tk")
pixel_size = 0.002
texture = ExtResource("6_bfg8e")

[node name="LogoSpot" type="SpotLight3D" parent="LogoOrigin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00300002, 0.235, 0.58)
spot_range = 1.0

[node name="Continue" type="TextureRect" parent="."]
unique_name_in_owner = true
z_index = 1
texture_filter = 1
offset_left = 97.0
offset_top = 83.0
offset_right = 223.0
offset_bottom = 157.0
texture = ExtResource("14_e1yo8")

[node name="ContinueCursor" type="TextureRect" parent="Continue"]
unique_name_in_owner = true
z_index = 1
layout_mode = 0
offset_left = 118.0
offset_top = 49.0
offset_right = 127.0
offset_bottom = 66.0
texture = ExtResource("15_hc7kx")

[node name="Title" type="Marker2D" parent="."]

[node name="StartButton" type="Sprite2D" parent="Title"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, 159)
texture = ExtResource("7_j73lr")
centered = false
vframes = 2

[node name="Copyright" type="Label" parent="Title"]
texture_filter = 1
offset_left = 96.0
offset_top = 207.0
offset_right = 228.0
offset_bottom = 226.0
text = "Â© 1997 Garalina"
label_settings = ExtResource("9_2brh2")
horizontal_alignment = 1

[node name="FileSelect" type="Marker2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(320, 0)

[node name="Files" type="Marker2D" parent="FileSelect"]
unique_name_in_owner = true

[node name="File" type="Marker2D" parent="FileSelect/Files"]
position = Vector2(26, 22)

[node name="FileFrame" type="TextureRect" parent="FileSelect/Files/File"]
texture_filter = 1
texture = ExtResource("8_hgps8")

[node name="Icon" type="AnimatedSprite2D" parent="FileSelect/Files/File"]
material = SubResource("ShaderMaterial_4qgig")
position = Vector2(31, 29)
sprite_frames = SubResource("SpriteFrames_666n8")
autoplay = "default"
frame = 2
frame_progress = 0.25101

[node name="Panic" type="TextureRect" parent="FileSelect/Files/File"]
visible = false
texture_filter = 1
offset_left = 62.0
offset_top = 26.0
offset_right = 201.0
offset_bottom = 38.0
texture = ExtResource("10_lli8y")

[node name="FileName" type="Label" parent="FileSelect/Files/File"]
texture_filter = 1
offset_left = 64.0
offset_top = 45.0
offset_right = 140.0
offset_bottom = 68.0
text = "Empty Game"
label_settings = ExtResource("9_2brh2")

[node name="CounterOrigin" type="Marker2D" parent="FileSelect/Files/File"]
visible = false
position = Vector2(137, 40)

[node name="Piece" type="TextureRect" parent="FileSelect/Files/File/CounterOrigin"]
texture_filter = 1
offset_right = 15.0
offset_bottom = 21.0
texture = ExtResource("11_b3kyf")

[node name="Counter" type="Label" parent="FileSelect/Files/File/CounterOrigin"]
texture_filter = 1
offset_left = 18.0
offset_top = 6.0
offset_right = 58.0
offset_bottom = 21.0
text = "00000"
label_settings = SubResource("LabelSettings_k8dyq")

[node name="File2" type="Marker2D" parent="FileSelect/Files"]
position = Vector2(93, 59)

[node name="FileFrame" type="TextureRect" parent="FileSelect/Files/File2"]
texture_filter = 1
offset_right = 200.0
offset_bottom = 70.0
texture = ExtResource("8_hgps8")
flip_h = true

[node name="Icon" type="AnimatedSprite2D" parent="FileSelect/Files/File2"]
visible = false
material = SubResource("ShaderMaterial_4qgig")
position = Vector2(168, 29)
sprite_frames = SubResource("SpriteFrames_666n8")
autoplay = "default"
frame = 2
frame_progress = 0.25101

[node name="Panic" type="TextureRect" parent="FileSelect/Files/File2"]
visible = false
texture_filter = 1
offset_left = -1.0
offset_top = 26.0
offset_right = 138.0
offset_bottom = 38.0
texture = ExtResource("10_lli8y")

[node name="FileName" type="Label" parent="FileSelect/Files/File2"]
texture_filter = 1
offset_left = 51.0
offset_top = 45.0
offset_right = 138.0
offset_bottom = 68.0
text = "Empty Game"
label_settings = ExtResource("9_2brh2")
horizontal_alignment = 2

[node name="CounterOrigin" type="Marker2D" parent="FileSelect/Files/File2"]
visible = false
position = Vector2(8, 40)

[node name="Piece" type="TextureRect" parent="FileSelect/Files/File2/CounterOrigin"]
texture_filter = 1
offset_right = 15.0
offset_bottom = 21.0
texture = ExtResource("11_b3kyf")

[node name="Counter" type="Label" parent="FileSelect/Files/File2/CounterOrigin"]
texture_filter = 1
offset_left = 18.0
offset_top = 6.0
offset_right = 58.0
offset_bottom = 21.0
text = "00000"
label_settings = SubResource("LabelSettings_k8dyq")

[node name="File3" type="Marker2D" parent="FileSelect/Files"]
position = Vector2(26, 96)

[node name="FileFrame" type="TextureRect" parent="FileSelect/Files/File3"]
texture_filter = 1
texture = ExtResource("8_hgps8")

[node name="Icon" type="AnimatedSprite2D" parent="FileSelect/Files/File3"]
visible = false
material = SubResource("ShaderMaterial_4qgig")
position = Vector2(31, 29)
sprite_frames = SubResource("SpriteFrames_666n8")
autoplay = "default"
frame = 2
frame_progress = 0.25101

[node name="Panic" type="TextureRect" parent="FileSelect/Files/File3"]
visible = false
texture_filter = 1
offset_left = 62.0
offset_top = 26.0
offset_right = 201.0
offset_bottom = 38.0
texture = ExtResource("10_lli8y")

[node name="FileName" type="Label" parent="FileSelect/Files/File3"]
texture_filter = 1
offset_left = 64.0
offset_top = 45.0
offset_right = 140.0
offset_bottom = 68.0
text = "Empty Game"
label_settings = ExtResource("9_2brh2")

[node name="CounterOrigin" type="Marker2D" parent="FileSelect/Files/File3"]
visible = false
position = Vector2(137, 40)

[node name="Piece" type="TextureRect" parent="FileSelect/Files/File3/CounterOrigin"]
texture_filter = 1
offset_right = 15.0
offset_bottom = 21.0
texture = ExtResource("11_b3kyf")

[node name="Counter" type="Label" parent="FileSelect/Files/File3/CounterOrigin"]
texture_filter = 1
offset_left = 18.0
offset_top = 6.0
offset_right = 58.0
offset_bottom = 21.0
text = "00000"
label_settings = SubResource("LabelSettings_k8dyq")

[node name="FileSelectButtons" type="Marker2D" parent="FileSelect"]
unique_name_in_owner = true
texture_filter = 1

[node name="CrossButton" type="AnimatedSprite2D" parent="FileSelect/FileSelectButtons"]
position = Vector2(68, 205)
sprite_frames = SubResource("SpriteFrames_bobwt")
autoplay = "default"
frame = 1

[node name="SelectFile" type="Label" parent="FileSelect/FileSelectButtons"]
offset_left = 79.0
offset_top = 204.0
offset_right = 158.0
offset_bottom = 227.0
text = "Select File"
label_settings = ExtResource("9_2brh2")

[node name="TriangleButton" type="AnimatedSprite2D" parent="FileSelect/FileSelectButtons"]
position = Vector2(195, 205)
sprite_frames = SubResource("SpriteFrames_6x4yc")
autoplay = "default"

[node name="GoBack" type="Label" parent="FileSelect/FileSelectButtons"]
offset_left = 206.0
offset_top = 204.0
offset_right = 282.0
offset_bottom = 227.0
text = "Go Back"
label_settings = ExtResource("9_2brh2")

[node name="FileSelectButtons2" type="Marker2D" parent="FileSelect"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, 50)

[node name="CrossButton" type="AnimatedSprite2D" parent="FileSelect/FileSelectButtons2"]
position = Vector2(56, 205)
sprite_frames = SubResource("SpriteFrames_bobwt")
autoplay = "default"
frame = 1

[node name="SelectFile" type="Label" parent="FileSelect/FileSelectButtons2"]
offset_left = 64.0
offset_top = 204.0
offset_right = 143.0
offset_bottom = 227.0
text = "Select"
label_settings = ExtResource("9_2brh2")

[node name="FInishButton" type="AnimatedSprite2D" parent="FileSelect/FileSelectButtons2"]
position = Vector2(142, 203)
sprite_frames = SubResource("SpriteFrames_8nl5t")
autoplay = "default"

[node name="Finish" type="Label" parent="FileSelect/FileSelectButtons2"]
offset_left = 147.0
offset_top = 204.0
offset_right = 223.0
offset_bottom = 227.0
text = "Finish"
label_settings = ExtResource("9_2brh2")

[node name="TriangleButton" type="AnimatedSprite2D" parent="FileSelect/FileSelectButtons2"]
position = Vector2(217, 205)
sprite_frames = SubResource("SpriteFrames_6x4yc")
autoplay = "default"

[node name="GoBack" type="Label" parent="FileSelect/FileSelectButtons2"]
offset_left = 225.0
offset_top = 204.0
offset_right = 301.0
offset_bottom = 227.0
text = "Go Back"
label_settings = ExtResource("9_2brh2")

[node name="ColorOverlay" type="ColorRect" parent="FileSelect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 240)
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_k032k")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.951057, 0.309017, 0, -0.309017, 0.951057, 3.924, 3.25, 9)
fov = 35.0

[node name="Fade" type="ColorRect" parent="."]
z_index = 2
z_as_relative = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="PressedStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_q7emt")
bus = &"Music"

[node name="Song" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_ua51s")
bus = &"Music"

[node name="Whistle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_pydtj")
volume_db = -2.0
bus = &"HUD_SFX"

[node name="FileSelected" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_iupuy")
bus = &"HUD_SFX"

[node name="FileSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_bh006")
bus = &"HUD_SFX"

[node name="CardTimer" type="Timer" parent="."]

[node name="DemoTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="MovePermission" type="Timer" parent="."]
unique_name_in_owner = true

[node name="RoadMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = ExtResource("21_aaa3k")
surface_material_override/0 = SubResource("ShaderMaterial_n176l")

[node name="RoadMesh2" type="MeshInstance3D" parent="RoadMesh"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)
mesh = ExtResource("21_aaa3k")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_n176l")

[node name="RoadMesh3" type="MeshInstance3D" parent="RoadMesh"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)
mesh = ExtResource("21_aaa3k")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_n176l")

[node name="FogFocus" parent="." instance=ExtResource("25_00iv3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0.503355, 0)

[connection signal="timeout" from="DemoTimer" to="." method="_on_demo_timer_timeout"]
